# SGGW

./: README.md  experiments.db
Python/alembic/: env.py
Python_1/: README.md
Python_1/filegrabber/: LOGS.md  README.md  missing_values.csv  pyproject.toml  values.csv
Python_1/filegrabber/src/filegrabber/: main.py  transformer.py
Python_2/: Pipfile  context_experiments.py  exercise3.py  experiments.db  models.py  models2.py  models3.py  requirements.txt  test.txt
Python_2/my_app/: pyproject.toml
Uczenie_Maszynowe/: 01.py  iris_model.py
Uczenie_Maszynowe/ZegarBiologicznyML/: .gitignore  Dokumentacja.md  requirements.txt
Uczenie_Maszynowe/ZegarBiologicznyML/src/: baseline_rgb.py  utils.py
