[project]
name = "my-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Artur Kwiek",email = "artur.kwiek@wp.pl"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "my_app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
